Update schema discovery environment documentation (#7863)
## What are you changing in this pull request and why?
<!--
Describe your changes and why you're making them. If related to an open
issue or a pull request on dbt Core or another repository, then link to
them here!

To learn more about the writing conventions used in the dbt Labs docs,
see the [Content style
guide](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md).
-->
The beta API should not have been included in this page, this was
included by accident.
## Checklist
<!-- Ensure your PR meets the following items. Feel free to add
additiona checklist items to the list if additional checks need to
happen before the PR is merged, such as:
- [ ] Needs technical review
- [ ] Change base branch
- [ ] Merge on xyz date
-->
- [ ] The changes in this PR meet the [docs style
guide/fundamentals](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md)
required for all content.
- [ ] Applied the proper versioning rules if the content is for specific
dbt version(s): ([version a whole
page](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#adding-a-new-version)
or [version a block of
content](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#versioning-blocks-of-content)
- [ ] The content in this PR requires a dbt release note, so I added one
to the [release notes
page](https://docs.getdbt.com/docs/dbt-versions/dbt-cloud-release-notes).).
<!--
PRE-RELEASE VERSION OF dbt (if so, uncomment):
- [ ] Add a note to the prerelease version [Migration
Guide](https://github.com/dbt-labs/docs.getdbt.com/tree/current/website/docs/docs/dbt-versions/core-upgrade)
-->
<!-- 
ADDING OR REMOVING PAGES (if so, uncomment):
- [ ] Add/remove page in `website/sidebars.js`
- [ ] Provide a unique filename for new pages
- [ ] Add an entry for deleted pages in `website/vercel.

--- a/website/docs/docs/dbt-cloud-apis/schema-discovery-environment.mdx
+++ b/website/docs/docs/dbt-cloud-apis/schema-discovery-environment.mdx
@@ -14,7 +14,7 @@ The [Example queries](#example-queries) illustrate a few fields you can query wi
 
 When querying for `environment`, you can use the following arguments.
 
-<QueryArgsTable queryName="environment" useBetaAPI />
+<QueryArgsTable queryName="environment" />
 
 ### Example queries
 
@@ -86,10 +86,10 @@ query ($environmentId: BigInt!, $uniqueId: String) {
 ### Fields
 When querying an `environment`, you can use the following fields.
 
-<SchemaTable nodeName="Environment" useBetaAPI />
+<SchemaTable nodeName="Environment" />
 
 When querying the `applied` field of `environment`, you can use the following fields.
-<SchemaTable nodeName="AppliedState" useBetaAPI />
+<SchemaTable nodeName="AppliedState" />
 
 When querying the `definition` field of `environment`, you can use the following fields.
-<SchemaTable nodeName="DefinitionState" useBetaAPI />
+<SchemaTable nodeName="DefinitionState" />
