Reorganizing environment object schema docs (#7868)
## What are you changing in this pull request and why?

This PR will improve the layout of the environment schema, bringing
objects up tto the top level and adding field details in each object.

### plan
More details in [this internal Notion
doc](https://www.notion.so/dbtlabs/Environment-API-documentation-revamp-25bbb38ebda780f78504ed79989a1ecf)

Each object should have a layout similar to:

- Overview - Brief description of the object and its purpose (we can
probably get this programatically too?)
- Schema Reference - Technical details including:
    - Arguments (automatically generated)
    - Fields (automatically generated)
    - Important Relationships (edges/nodes)
- Example Queries - Practical implementation examples
- Use Cases - Common scenarios where this object is helpful

## Checklist
<!-- Ensure your PR meets the following items. Feel free to add
additiona checklist items to the list if additional checks need to
happen before the PR is merged, such as:
- [ ] Needs technical review
- [ ] Change base branch
- [ ] Merge on xyz date
-->
- [ ] The changes in this PR meet the [docs style
guide/fundamentals](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/content-style-guide.md)
required for all content.
- [ ] Applied the proper versioning rules if the content is for specific
dbt version(s): ([version a whole
page](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#adding-a-new-version)
or [version a block of
content](https://github.com/dbt-labs/docs.getdbt.com/blob/current/contributing/single-sourcing-content.md#versioning-blocks-of-content)
- [ ] The content in this PR requires a dbt release note, so I added one
to the [release notes
page](https://docs.getdbt.com/docs/dbt-versions/dbt-cloud-release-notes).).
<!--
PRE-RELEASE VERSION OF dbt (if so, uncomment):
- [ ] Add a note to the prerelease version [Migration
Guide](https://github.com/dbt

--- a/website/docs/docs/dbt-cloud-apis/schema-discovery-environment-applied-modelHistoricalRuns.mdx
+++ b/website/docs/docs/dbt-cloud-apis/schema-discovery-environment-applied-modelHistoricalRuns.mdx
@@ -3,7 +3,7 @@ title: "Model Historical Runs object schema"
 sidebar_label: "Model historical runs"
 id: "discovery-schema-environment-applied-modelHistoricalRuns"
 ---
-
+ 
 import { NodeArgsTable, SchemaTable } from "./schema";
 
 The model historical runs object allows you to query information about a model's run history. 
@@ -18,7 +18,7 @@ When querying for `modelHistoricalRuns`, you can use the following arguments:
 
 ### Example query
 
-You can use the `environmentId` and the model's `uniqueId` to return the model and its execution time for the last 20 times it was run, regardless of which job ran it.
+You can specify the `environmentId` and the model's `uniqueId` to return the model and its execution history for the `customers` model in the `marketing` package, including performance metrics and test results for the last 20 times it was run, regardless of which job ran it.
 
 ```graphql
 query {
