--- a/website/docs/docs/dbt-cloud-apis/schema-discovery-environment-applied-exposure-tile.mdx
+++ b/website/docs/docs/dbt-cloud-apis/schema-discovery-environment-applied-exposure-tile.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Exposure Tile object schema"
+title: "Exposure tile object schema"
 sidebar_label: "Exposure tile"
 id: "discovery-schema-environment-applied-exposure-tile"
 ---
